--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -1,5 +1,5 @@
 # == Schema Information
-# Schema version: 20100805225544
+# Schema version: 20100911071814
 #
 # Table name: students
 #
@@ -10,6 +10,10 @@
 #  teacher_id      :integer(4)
 #  created_at      :datetime
 #  updated_at      :datetime
+#  ptsa_member     :boolean(1)
+#  ptsa_member_id  :integer(8)
+#  yearbook        :boolean(1)
+#  yearbook_qty    :integer(4)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
